--- a/lieblings-master/package.json
+++ b/lieblings-master/package.json
@@ -24,10 +24,15 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@ngmodule/material-carousel": "^0.6.0",
     "@ngneat/tailwind": "^7.0.3",
+    "angular-responsive-carousel": "^2.1.2",
     "ng-particles": "^2.7.3",
     "ng9-password-strength-bar": "^1.1.0",
+    "ngx-show-hide-password": "^2.3.0",
     "ngx-skeleton-loader": "^2.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
